Bug 95484 - Proximity event not updated for tablet pen
Summary: Proximity event not updated for tablet pen
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-19 07:21 UTC by ulihuber
Modified: 2017-02-03 04:01 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description ulihuber 2016-05-19 07:21:44 UTC
The proximity is not updated for pens in xinput when libinput is used as driver. Libinput generates events according to proximity events but they are not relayed to xinput.

Excert from libinput-list-devices (the tablet with the problem):

Device:           Wacom ISDv4 EC Pen
Kernel:           /dev/input/event6
Group:            6
Seat:             seat0, default
Size:             256.93x144.93mm
Capabilities:     tablet
Tap-to-click:     n/a
Tap-and-drag:     n/a
Tap drag lock:    n/a
Left-handed:      n/a
Nat.scrolling:    n/a
Middle emulation: n/a
Calibration:      identity matrix
Scroll methods:   none
Click methods:    none
Disable-w-typing: n/a
Accel profiles:   none

Excert from xinput query-state:

2 classes :
ButtonClass
	button[1]=up
	button[2]=up
	button[3]=up
	button[4]=up
	button[5]=up
	button[6]=up
	button[7]=up
ValuatorClass Mode=Absolute Proximity=In <-- This value never changes
	valuator[0]=9866567
	valuator[1]=16470674
	valuator[2]=0

Excert from libinput-debug-events:

event2 	DEVICE_ADDED     Power Button                      seat0 default group1 cap:k
event4 	DEVICE_ADDED     Video Bus                         seat0 default group2 cap:k
event0 	DEVICE_ADDED     Power Button                      seat0 default group3 cap:k
event15	DEVICE_ADDED     SYNAPTICS Synaptics Touch Digitizer V04 seat0 default group4 cap:t	size 278.60/157.90mm calib
event13	DEVICE_ADDED     Integrated Camera                 seat0 default group5 cap:k
event6 	DEVICE_ADDED     Wacom ISDv4 EC Pen                seat0 default group6 cap:T	size 256.93/144.93mm calib
event3 	DEVICE_ADDED     AT Translated Set 2 keyboard      seat0 default group7 cap:k
event5 	DEVICE_ADDED     SynPS/2 Synaptics TouchPad        seat0 default group8 cap:pg	size 84.53/50.77mm tap(dl off) left scroll-nat scroll-2fg-edge click-buttonareas-clickfinger dwt-on
event14	DEVICE_ADDED     TPPS/2 IBM TrackPoint             seat0 default group9 cap:p left scroll-nat scroll-button
event7 	DEVICE_ADDED     ThinkPad Extra Buttons            seat0 default group10 cap:k
event6 	TABLET_TOOL_PROXIMITY  +6.01s		170.49*/170.49*	pressure: 0.00*pen (0, id 0) proximity-in	axes:p	btn:SS2
event6 	TABLET_TOOL_AXIS  +6.07s		170.57*/170.57	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.09s		170.57/170.57*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.09s		170.63*/170.63*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.10s		170.63/170.63*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.11s		170.63/170.63*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.12s		170.63/170.63*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.13s		170.68*/170.68*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.13s		170.68/170.68*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.14s		170.68/170.68*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.15s		170.68/170.68*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.17s		170.68/170.68*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.19s		170.68/170.68*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.21s		170.56*/170.56	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.22s		170.56/170.56*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.23s		170.46*/170.46	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.24s		170.46/170.46*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.25s		170.39*/170.39*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.26s		170.39/170.39*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.27s		170.34*/170.34	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.27s		170.24*/170.24*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.29s		170.15*/170.15*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.31s		170.01*/170.01	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.31s		169.91*/169.91	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.32s		169.74*/169.74	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.33s		169.56*/169.56*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.33s		169.32*/169.32*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.34s		169.06*/169.06*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.35s		168.85*/168.85*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.36s		168.63*/168.63*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.37s		168.45*/168.45*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.37s		168.27*/168.27*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.38s		168.19*/168.19*	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.39s		168.09*/168.09	pressure: 0.00
event6 	TABLET_TOOL_AXIS  +6.39s		168.09/168.09*	pressure: 0.00
event6 	TABLET_TOOL_PROXIMITY  +6.42s			pen (0, id 0) proximity-out	axes:p	btn:SS2
Comment 1 Peter Hutterer 2016-05-23 04:16:22 UTC
https://patchwork.freedesktop.org/patch/88540/
Comment 2 Peter Hutterer 2017-02-03 04:01:25 UTC
commit d8aef838347bc64fa635eeac436c2d1154d846ce
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon May 23 14:12:14 2016 +1000

    Fix proximity events


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.